# So_long

./: CMakeLists.txt  Makefile  README.md  cherry.xpm  get_frame_and_set_size.c
files/: game.c  get_map.c  main.c  map1.ber  map2.ber  map3.ber  map_big.ber  render.c
get_next_line/: get_next_line.h
includes/: so_long.h  textures.h
textures/: chain.xpm  chain_up.xpm  character_down.xpm  character_left.xpm  character_right.xpm  character_up.xpm  cherry.xpm  cherry2.xpm  cherry3.xpm  coin_x8.xpm  column_down.xpm  column_half.xpm  column_middle.xpm  column_up.xpm  floor.xpm  floor2.xpm  floor3.xpm  floor4.xpm  floor_lava.xpm  grass.xpm  ice.xpm  key.xpm  lavad.xpm  lavad2.xpm  sprite_coin.xpm  tileset.xpm  tooth_down.xpm  tooth_left.xpm  tooth_right.xpm  tooth_up.xpm  wall.xpm  wall_cube.xpm  wall_destroed1.xpm  wall_destroed2.xpm  wooden_block.xpm  wooden_block1.xpm  wooden_block2.xpm  wooden_block3.xpm  wooden_block4.xpm
